...

      GroupBox {
        VStack(alignment: .leading) {
          HStack(alignment: .top) {
            Menu {
              Button(action: { Config.Writer(state).setFallbackInterfaceAction(action: .random) }) {
                Text("Always Keep Random")
              }
              Button(action: { Config.Writer(state).setFallbackInterfaceAction(action: .original) }) {
                Text("Keep Original MAC Address")
              }
              Button(action: { Config.Writer(state).setFallbackInterfaceAction(action: nil) }) {
                Text("Ignore")
              }
              Divider()
            } label: {
              switch actionValue.wrappedValue {
                case .random:
                  Text("Always Keep Random")
...
