...
          Label("FAQ", systemImage: "book.pages")
        }

        Spacer()

        NavigationLink(value: Pane.preferences.rawValue) {
          Label("Settings", systemImage: "gear")
        }

        NavigationLink(value: Pane.vendors.rawValue) {
          Label("Vendors", systemImage: "apple.logo")
        }

        Spacer()
        Text("Interfaces")

        NavigationLink(value: Pane.defaultPolicy.rawValue) {
          Label("Interface Default", systemImage: "wand.and.stars.inverse")
        }

        ForEach(state.allInterfaces) { interface in
          let isHidden = state.config.policy(interface.hardMAC).action == .hide
          let opacity = isHidden ? 0.5 : 1
          NavigationLink(value: interface.id) {
...
